# daily_pottery

./: CMakeLists.txt  test.json
resources/fonts/: pixix.json
resources/templates/: backgroundTemplate.json  bigTextFieldTemplate.json  sliderLineTemplate.json
resources/textures/: buttonTemplate.json
src/: animation.cpp  animation.h  application.cpp  application.h  assets.h  box.h  boxTemplate.cpp  boxTemplate.h  button.cpp  button.h  color.h  content.cpp  content.h  contentWrap.cpp  contentWrap.h  encoding.cpp  encoding.h  fixedDrawable.cpp  fixedDrawable.h  font.cpp  font.h  input.cpp  input.h  inputBox.cpp  inputBox.h  jsonval.cpp  jsonval.h  main.cpp  mouse.cpp  mouse.h  pixelImage.cpp  pixelImage.h  rect.h  slider.cpp  slider.h  textBox.cpp  textBox.h  texture.cpp  texture.h  vector2.h  (+4 more)
